🚑 [Fix]: Modify main screen overflow
- 높이를 100vh로 설정하면서 main_content 외의 부분이 스크롤되는 문제를 해결하기 위해 overflow:hidden을 추가함

--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -4,7 +4,8 @@
 .layout {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 100dvh;
+    overflow: hidden;
 }
 
 .header {
@@ -24,7 +25,7 @@
     width: 100%;
     height: 100%;
     margin: 0 auto;
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 0rem;
 
     max-width: $mobile;
     @media (min-width: $tablet) {
